<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="59dp"
    tools:layout_editor_absoluteY="-292dp">

    <TextView
        android:id="@+id/tv_access_fine_location"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/background_location"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/btn_access_background_location"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_status_access_background_location"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:text="@string/not_granted"
        android:textColor="@color/not_provided"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_access_fine_location"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_phone_calls"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/activity_recognition"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/btn_activity_recognition"
        app:layout_constraintTop_toBottomOf="@+id/tv_access_fine_location" />

    <TextView
        android:id="@+id/tv_status_activity_recognition"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/not_granted"
        android:textColor="@color/not_provided"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_phone_calls"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_access_background_location" />

    <TextView
        android:id="@+id/tv_read_calendar_permission"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/calendar"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/btn_read_calendar"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_calls" />

    <TextView
        android:id="@+id/tv_status_read_calendar_permission"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/not_granted"
        android:textColor="@color/not_provided"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_read_calendar_permission"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_activity_recognition" />

    <Button
        android:id="@+id/btn_access_background_location"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/ic_menu_mapmode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_activity_recognition"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/ic_menu_compass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_access_background_location"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_read_calendar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/ic_menu_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_activity_recognition"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_grant_all"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/ic_menu_sort_alphabetically"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_read_calendar"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hello"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_all_granted"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/all"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_grant_all"
        app:layout_constraintTop_toBottomOf="@+id/tv_read_calendar_permission" />


</androidx.constraintlayout.widget.ConstraintLayout>